--- a/SistemaDePedidos/servicios/templates/servicios/servicios.html
+++ b/SistemaDePedidos/servicios/templates/servicios/servicios.html
@@ -11,7 +11,12 @@
 
 {% block content %}
 <body>
-    <p style="color: white;">Servicios</p>
+    {% for servicio in servicios %}
+
+        <h2>{{servicio.titulo}}</h2>
+        <p>{{servicio.contenido}}</p>
+        <p><img src="{{servicio.imagen.url}}" alt=""></p>
+    {% endfor %}
 </body>
 {% endblock%}
 </html>
