--- a/SistemaDePedidos/SistemaPedidosWebApp/templates/SistemaPedidosWebApp/base.html
+++ b/SistemaDePedidos/SistemaPedidosWebApp/templates/SistemaPedidosWebApp/base.html
@@ -9,6 +9,9 @@
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Link CSS -->
+  <link rel="stylesheet" href="C:\Users\ramir\Desktop\MisCosas\Proyectos\SistemaDePedidos\SistemaDePedidos\SistemaPedidosWebApp\static\SistemaPedidosWebApp\css\gestion.css">
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
@@ -50,6 +53,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarContent">
+        
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link fw-semibold" href="{% url 'Home' %}">Inicio</a></li>
           <li class="nav-item"><a class="nav-link fw-semibold" href="{% url 'Servicios' %}">Servicios</a></li>
@@ -57,8 +61,7 @@
           <li class="nav-item"><a class="nav-link fw-semibold" href="{% url 'Contacto' %}">Contacto</a></li>
           <li class="nav-item"><a class="nav-link fw-semibold" href="{% url 'Blog' %}">Blog</a></li>
         </ul>
-        <!-- Toggle Dark Mode -->
-        <button id="themeToggle" class="btn btn-sm btn-light ms-3">🌙</button>
+      
       </div>
     </div>
   </nav>
@@ -76,25 +79,5 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Script Modo Oscuro -->
-  <script>
-    const toggle = document.getElementById("themeToggle");
-    const html = document.documentElement;
-
-    toggle.addEventListener("click", () => {
-      const currentTheme = html.getAttribute("data-bs-theme");
-      if (currentTheme === "light") {
-        html.setAttribute("data-bs-theme", "dark");
-        toggle.textContent = "☀️";
-        toggle.classList.remove("btn-light");
-        toggle.classList.add("btn-dark");
-      } else {
-        html.setAttribute("data-bs-theme", "light");
-        toggle.textContent = "🌙";
-        toggle.classList.remove("btn-dark");
-        toggle.classList.add("btn-light");
-      }
-    });
-  </script>
 </body>
 </html>
