agrego funcion de login

--- a/SistemaDePedidos/SistemaPedidosWebApp/templates/SistemaPedidosWebApp/base.html
+++ b/SistemaDePedidos/SistemaPedidosWebApp/templates/SistemaPedidosWebApp/base.html
@@ -69,7 +69,7 @@
         {% if user.is_authenticated %}
           Hola {{ user.username }} &nbsp; &nbsp; <a href="{% url 'cerrar_sesion' %}" style="color: white;">Cerrar sesion</a>
         {% else %}
-          <a href="#" style="color: white;">Login</a> &nbsp; &nbsp; <a href="{% url 'Autenticacion' %}" style="color: white;">Registrate</a>
+          <a href="{% url 'logear' %}" style="color: white;">Login</a> &nbsp; &nbsp; <a href="{% url 'Autenticacion' %}" style="color: white;">Registrate</a>
         {% endif %}
 
       </div>
