agrego funcion de pedidos funcionando

--- a/SistemaDePedidos/tienda/templates/carro/widget.html
+++ b/SistemaDePedidos/tienda/templates/carro/widget.html
@@ -44,6 +44,13 @@
                 Total: {{importe_total_carro}} $
             </td>
         </tr>
+        {% if request.session.carro.items %}
+        <tr>
+            <td colspan="3" style="text-align: center;">
+                <a href="../pedidos" class="btn btn-success">Hacer Pedido</a>
+            </td>
+        </tr>
+        {% endif %}
     </tfoot>
 
 </table>
