--- a/SistemaDePedidos/SistemaPedidosWebApp/templates/SistemaPedidosWebApp/home.html
+++ b/SistemaDePedidos/SistemaPedidosWebApp/templates/SistemaPedidosWebApp/home.html
@@ -1,7 +1,7 @@
 {% extends "SistemaPedidosWebApp/base.html" %}
 {% load static %}
 
-{% block title %}Inicio - Gestión de Pedidos{% endblock %}
+{% block title %}Fenrir PC - Tienda Gaming{% endblock %}
 
 {% block content %}
 
